restructuring test classes, adding import/export tests